test/errors/type/collections/set/missing_op.yasl


const left = collections.set()

echo left + 0
